<resources>
    <string name="app_name">ClassicGamesHE</string>

    <string name="title_section1">Home</string>
    <string name="title_section2">Statistic</string>
    <string name="title_section3">Tic Tac Toe</string>
    <string name="settings">Einstellungen</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Actions</string>

    <string name="action_logout">Log Out</string>
    <string name="back_to_login">Zurück zum Login</string>

    <!--LoginFragment-->
    <string name="login_fragment_min_password_lenght_text">mind 4 Zeichen</string>
    <string name="login_fragment_register_new_btn_text">NEU REGISTRIEREN</string>
    <string name="login_fragment_register_btn_text">REGISTRIEREN</string>
    <string name="login_fragment_login_btn_text">LOGIN</string>
    <string name="login_fragment_error_no_user_name">Bitte geben Sie den Benutzername ein.</string>
    <string name="login_fragment_error_no_passowrd">Bitte geben Sie das Passwort ein.</string>

    <!--  DeviceListActivity -->
    <string name="scanning">scanning for devices...</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>

    <!-- Bluetooth errors -->
    <string name="bt_connection_lost">Connection lost</string>
    <string name="bt_unable">Unable to connect</string>

    <!--DialogHelper-->
    <string name="dialog_button_ok">OK</string>
    <string name="dialog_button_cancel">Abbrechen</string>
    <string name="dialog_title_fail">Fehler</string>
    <string name="dialog_title_error">Error</string>
    <string name="dialog_message_wrong_password">Die Passwörter stimmen nicht überein!</string>
    <string name="dialog_message_user_exists">Der User wurde bereits angelegt!</string>
    <string name="dialog_message_can_not_change_password">Das Passwort konnte leider nicht geändert werden</string>


    <string name="settings_fragment_text">Hallo %1$s momentan kannst du dein Passwort nur in den Einstellungen ändern. </string>
    <string name="settings_fragment_change_passwort_text">Passwort ändern</string>
    <string name="settings_fragment_old_password_text">Altes Passwort</string>
    <string name="settings_fragment_new_password_text">Neues Passwort</string>
    <string name="settings_fragment_repeat_new_password_text">Neues Passwort wiederholen</string>
    <string name="settings_fragment_save_new_pwd_text">Speichern</string>
    <string name="settings_fragment_back_text">Zurück</string>
    <string name="settings_fragment_login_error">Der Benutzername oder das Passwort ist nicht korrekt!</string>

    <string name="settings_fragment_old_pwd_wrong">Ihr altes Passwort wurd nicht korrekt eingegeben!</string>
    <string name="settings_fragment_min_4_chars">Ihr neues Passwort muss mind. 4 Zeichen lang sein!</string>

    <!--StatisticFragment-->
    <string name="statistic_x_winner_text">X hat %1$d Spiele gewonnen</string>
    <string name="statistic_o_winner_text">O hat %1$d Spiele gewonnen</string>


    <!--SQL TicTacToeDataBase-->
    <string name="sql_string_get_data">select x,o, multiplayer from tictactoe where userID=</string>
</resources>
