<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="de.classicgameshe.classicgameshe.fm.SettingsFragment"
    android:orientation="vertical">

    <TextView
        android:id="@+id/settings_name_tv"
        android:layout_marginTop="16dp"
        android:paddingLeft="20dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/settings_change_password_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_fragment_change_passwort_text"
        android:layout_margin="16dp"/>
    <LinearLayout
        android:id="@+id/settings_change_password_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="vertical">
    <EditText
        android:id="@+id/settings_old_pwd_ed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/settings_fragment_old_password_text"/>
    <EditText
        android:id="@+id/settings_new_pwd_ed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/settings_fragment_new_password_text"/>
    <EditText
        android:id="@+id/settings_repeat_new_pwd_ed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/settings_fragment_repeat_new_password_text"/>

        <Button
            android:id="@+id/settings_save_new_pwd_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/settings_fragment_save_new_pwd_text"/>

    </LinearLayout>


</LinearLayout>
