<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/home_bg"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

    <Button
        android:layout_width="match_parent"
        android:layout_height="@dimen/home_button_height"
        android:id="@+id/home_tic_tac_toe_btn"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/home_button_margin_top"
        android:text="@string/title_section3"
        android:background="@drawable/home_btn_bg"
        android:textColor="@color/white"
        android:textSize="25sp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="@dimen/home_button_height"
        android:id="@+id/home_statistic_btn"
        android:background="@drawable/home_btn_bg"
        android:textColor="@color/white"
        android:text="@string/title_section2"
        android:textSize="25sp"
        android:layout_marginTop="@dimen/home_button_margin_top"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="@dimen/home_button_height"
        android:id="@+id/home_settings_btn"
        android:layout_gravity="center"
        android:text="@string/settings"
        android:layout_marginTop="@dimen/home_button_margin_top"
        android:textColor="@color/white"
        android:background="@drawable/home_btn_bg"
        android:textSize="25sp"/>
    </LinearLayout>

</LinearLayout>
